[tool.poetry]
name = "goit-web-hw-13"
version = "0.1.0"
description = ""
authors = ["R.Anatolii <tv.weplay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
python-decouple = "^3.8"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
python-jose = "^3.3.0"
python-multipart = "^0.0.17"
bcrypt = "4.0.1"
passlib = "1.7.4"
fastapi-mail = "^1.4.1"
aiomysql = "^0.2.0"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.41.0"
faker = "^33.0.0"
django = "^5.1.3"
pymongo = "^4.10.1"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
